--- a/.gitignore
+++ b/.gitignore
@@ -45,3 +45,4 @@ Temporary Items
 /dionissempoisbdmmxsdc/nbproject/private/
 /dionissempoisbdmmxsdc/build/
 *.properties
+dionissempoisbdmmxsdc/nbproject/project.properties
