--- a/dionissempoisbdmmxsdc/web/WEB-INF/web.xml
+++ b/dionissempoisbdmmxsdc/web/WEB-INF/web.xml
@@ -12,4 +12,21 @@
         <servlet-name>Login</servlet-name>
         <url-pattern>/login</url-pattern>
     </servlet-mapping>
+     <!-- SMTP settings -->
+    <context-param>
+        <param-name>host</param-name>
+        <param-value>smtp.gmail.com</param-value>
+    </context-param>
+    <context-param>
+        <param-name>port</param-name>
+        <param-value>587</param-value>
+    </context-param>
+    <context-param>
+        <param-name>user</param-name>
+        <param-value>thedamnedsobs@gmail.com</param-value>
+    </context-param>
+    <context-param>
+        <param-name>pass</param-name>
+        <param-value>112358132134558914</param-value>
+    </context-param>
 </web-app>
